--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
+    "setup": "ts-node setup.ts",
     "start": "ts-node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/better-sqlite3": "^7.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "better-sqlite3": "^7.5.0",
     "cors": "^2.8.5",
     "espress": "0.0.0",
     "express": "^4.17.2",
